--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Gulp: Watch SCSS",
       "type": "shell",
-      "command": "gulp",
+      "command": "npx gulp",
       "problemMatcher": [],
       "presentation": {
         "reveal": "always",
@@ -21,7 +21,7 @@
     {
       "label": "Gulp: Build",
       "type": "shell",
-      "command": "gulp build",
+      "command": "npx gulp build",
       "problemMatcher": [],
       "presentation": {
         "reveal": "always",
@@ -31,7 +31,7 @@
     {
       "label": "Gulp: Compile SCSS",
       "type": "shell",
-      "command": "gulp sass",
+      "command": "npx gulp sass",
       "problemMatcher": [],
       "presentation": {
         "reveal": "always",
